# ArthaChain

./: .dockerignore  .gitignore  100_PERCENT_COMPLETE_FINAL.md  ABSOLUTE_FINAL_COMPLETE.md  ALL_GAPS_FILLED.md  API_STATUS_REPORT.md  ARTHAAIN_V1_COMPLETION_ANALYSIS.md  CODE_OF_CONDUCT.md  COMPLETE_SYSTEM_STATUS.md  COMPLETION_REPORT_FINAL.md  CONTRIBUTING.md  Cargo.toml  DOCKER_UPDATES.md  FINAL_DELIVERY_100_PERCENT.md  FINAL_DELIVERY_SUMMARY.md  HONEST_COMPLETION_STATUS.md  LICENSE  Makefile  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READY.md  QUICK_START.md  README.md  README_COMPLETION.md  README_IDENTITY_AI_COMPLETE.md  RECHECK_ANALYSIS.md  SECURITY.md  SVDB_COMPLETION_STATUS.md  TOKENOMICS.md  Token_Policy_Spec.md  VERIFY_COMPLETION.sh  arthachain_api_test_results_20250907_130012.json  arthachain_api_test_results_20250923_183517.json  arthachain_api_test_results_20250923_184241.json  arthachain_config.yaml  audit.json  audit.toml  check_output.txt  check_output_2.txt  cloudflare-tunnel-config.yml  comprehensive_api_test.py  (+8 more)
blockchain_node/: .dockerignore  ARTHACHAIN_ARCHITECTURE.md  Cargo.toml  Dockerfile  HOSTING_GUIDE.md  alerting-rules.yml  build.rs  compilation_errors.txt  compilation_errors_2.txt  compilation_errors_3.txt  compilation_errors_4.txt  docker-compose.yml  grafana-blockchain-overview.json  grafana-consensus-metrics.json  grafana-network-performance.json  grafana-security-monitoring.json  grafana-slash-rotation.json  launch_arthachain_apis.sh  mod.rs  prometheus.yml  setup_environment.sh  test_grpc.rs  testnet-test-config.toml
blockchain_node/.cargo/: .global-cache
blockchain_node/.github/workflows/: ci.yml
blockchain_node/assets/logos/: logo_config.yaml  logo_integration.html
blockchain_node/cargo_home/: .global-cache
blockchain_node/cloudflared/: config.yml  config_template.yml
blockchain_node/config/: arthachain_rules.yml  domains.yaml  global_node.yaml  haproxy.cfg  network.yaml  node_template.yaml  prometheus.yml
blockchain_node/docker/: production.toml
blockchain_node/docs/: websocket_api.md
blockchain_node/examples/: blockchain_wasm_example.rs  cross_shard_tx_example.rs  data_chunking_test.rs  diamond_proxy_example.rs  fault_tolerance_test.rs  hybrid_storage_demo.rs  memmap_storage_example.rs  quantum_svbft_example.rs  real_world_simulation.rs  sustainability_test.rs  transaction_execution_example.rs  uups_proxy_example.rs  websocket_client.rs
blockchain_node/fuzz/fuzz_targets/: data_chunking.rs
blockchain_node/opentelemetry/: otel-config.yaml
blockchain_node/proto/: arthachain.proto
blockchain_node/scripts/: backup.sh  blockchain_metrics.rs  check_cloudflare_tunnel.sh  check_node_status.sh  com.arthachain.tunnel.user.plist  deploy_production.sh  generate_tunnel_config.sh  manage_permanent_tunnel.sh  run_cloudflare_tunnel.sh  run_cloudflare_tunnel_bg.sh  setup_decentralized_node.sh  setup_vm_node.sh  start_production.sh  start_testnet.sh  stop_cloudflare_tunnel.sh  stop_testnet.sh  stress_test.rs  test_p2p_connectivity.rs  test_tps.rs
blockchain_node/src/: gas_optimization.rs  lib.rs  main.rs  node.rs  smart_contract_engine.rs  types.rs
blockchain_node/src/advanced/: cors_middleware.rs  deprecation_feed.rs  mod.rs  model_retraining.rs
blockchain_node/src/ai_engine/: advanced_detection.rs  ai_services.rs  data_chunking.rs  mod.rs  neural_network.rs  online_learning.rs  real_fraud_detector.rs  real_inference.rs  security.rs  self_healing.rs  user_identification.rs
blockchain_node/src/ai_services/: anomaly_detection.rs  authenticity_verification.rs  mod.rs  reputation_scoring.rs  risk_scoring.rs
blockchain_node/src/api/: AI_API_SUMMARY.md  API_ENHANCEMENTS_SUMMARY.md  ai_endpoints.rs  arthachain_router.rs  blockchain_api.rs  dashboard_api.rs  errors.rs  faucet.rs  mod.rs  rate_limiter.rs  recovery_api.rs  routes.rs  schema_api.rs  server.rs  testnet_router.rs  testnet_router_backup.rs  testnet_router_fixed.rs  testnet_router_simple.rs  testnet_router_working.rs  validation.rs  wallet_integration.rs  websocket.rs  websocket_service.rs
blockchain_node/src/bridges/: cross_chain.rs  ethereum.rs  mod.rs
blockchain_node/src/common/: error.rs  hash.rs  mod.rs
blockchain_node/src/config/: mod.rs
blockchain_node/src/consensus/: adaptive.rs  advanced_staking.rs  ai_reputation.rs  anomaly_detection.rs  batch.rs  batch_validation.rs  block_manager.rs  byzantine.rs  checkpoint.rs  consensus_manager.rs  dag.rs  difficulty.rs  fraud_detection.rs  incentives.rs  leader_election.rs  load_balancer.rs  ltl.rs  metrics.rs  mod.rs  parallel_processor.rs  parallel_tx.rs  petri_net.rs  quantum_svbft.rs  receipt.rs  recovery.rs  reputation.rs  secure_parallel_tx.rs  security.rs  sharding.rs  social_graph.rs  state_pruning.rs  svbft.rs  svcp.rs  svcp_ai_integration.rs  validation.rs  validator_rotation.rs  validator_set.rs  verification.rs  view_change.rs  vote_aggregation.rs  (+1 more)
blockchain_node/src/contracts/: gas_optimizer.rs
blockchain_node/tests/: README_TESTING.md  benchmark_suite.sh  block_tests.rs  complete_system_validation.rs  consensus_tests.rs  contract_invariant_tests.rs  core_tests.rs  cross_shard_integration_test.rs  data_chunking_integration_tests.rs  e2e_svdb_tests.rs  evm_precompile_conformance.rs  integration_identity_tests.rs  integration_test_runner.sh  integration_tests.rs  persistence_tests.rs  phase1_core_validation.rs  phase1_performance_validation.rs  phase1_validation.rs  phase2_complete_summary.rs  phase2_core_completion.rs  phase2_evm_basic_compatibility.rs  phase2_evm_compatibility_complete.rs  phase2_evm_simple_demo.rs  phase2_execution_layer_validation.rs  phase2_gas_optimization_demo.rs  phase3_advanced_security_monitoring.rs  phase3_complete_all_phases.rs  phase3_security_working_demo.rs  phase5_comprehensive_testing_suite.rs  replay_dos.rs  view_change_integration_test.rs
docs/: README.md  (+23 more)
services/ai-agents/: Cargo.toml  Dockerfile
services/ai-jobd/: Cargo.toml  Dockerfile
services/ai-proofs/: Cargo.toml  Dockerfile
services/ai-scheduler/: Cargo.toml  Dockerfile
services/receipts_daemon/: Cargo.toml
(+1167 files in other folders)
