[workspace]
members = [
  "blockchain_node"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
bincode = "1.3"
sha2 = "0.10"
sha3 = "0.10"
blake2 = "0.10"
blake3 = "1.5"
aes-gcm = "0.10"
hmac = "0.12"
argon2 = "0.5"
zeroize = "1.7"
secp256k1 = "0.29"
bulletproofs = "4.0"
merlin = "3.0"
arrayref = "0.3"
brotli = "6.0"
lz4_flex = "0.11"
flate2 = "1.0"
num-bigint = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
byteorder = "1.5"
rand = "0.8"
rand_core = "0.6"
base64 = "0.22"
rayon = "1.10"
num_cpus = "1.16"
bumpalo = "3.15"
sysinfo = "0.33"
tiny-keccak = "2.0"
lazy_static = "1.5"
socket2 = "0.5"
memmap2 = "0.9"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
axum = { version = "0.7.9", features = ["ws", "multipart"] }
tower = "0.4"
tower-http = { version = "0.6.2", features = ["cors"] }
reqwest = { version = "0.12", features = ["json"] }
ethereum-types = "0.14"
prometheus = "0.14"
criterion = "0.5"
proptest = "1.4"
hickory-resolver = "0.24"
ndarray = "0.15"
ndarray-rand = "0.14"
protobuf = ">=3.7.2"
libp2p = { version = "0.54", features = ["tcp", "tokio", "noise", "yamux", "gossipsub", "kad", "identify", "mdns", "ping", "request-response", "quic", "macros"] }


