[package]
name = "arthachain_node"
version = "0.1.0"
edition = "2021"
authors = ["ArthaChain Team <team@arthachain.io>"]
description = "Next-generation blockchain node with AI-native features, quantum resistance, and ultra-high performance"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arthachain/arthachain"
homepage = "https://arthachain.com"
keywords = ["blockchain", "ai", "quantum-resistant", "consensus", "smart-contracts"]
categories = ["cryptography", "network-programming", "database", "algorithms"]

[lib]
name = "arthachain_node"
path = "src/lib.rs"

[[bin]]
name = "arthachain"
path = "src/main.rs"

[[bin]]
name = "arthachain_node"
path = "src/bin/arthachain_node.rs"

[[bin]]
name = "production_node"
path = "src/bin/production_node.rs"

[[bin]]
name = "arthachain_global_node"
path = "src/bin/arthachain_global_node.rs"

[[bin]]
name = "api_server"
path = "src/bin/api_server.rs"

[[bin]]
name = "contract_verifier"
path = "src/bin/contract_verifier.rs"

[[bin]]
name = "real_time_api_server"
path = "src/bin/real_time_api_server.rs"

[[bin]]
name = "massive_transaction_flood"
path = "src/bin/massive_transaction_flood.rs"

[[bin]]
name = "grpc_server"
path = "src/bin/grpc_server.rs"

[[bin]]
name = "arthai"
path = "src/bin/arthai.rs"

[[bin]]
name = "artha_prover_cuda"
path = "src/bin/artha_prover_cuda.rs"

[[bin]]
name = "artha_scheduler"
path = "src/bin/artha_scheduler.rs"

[[bin]]
name = "test_p2p_connectivity"
path = "scripts/test_p2p_connectivity.rs"

[[example]]
name = "cross_shard_tx_example"
path = "examples/cross_shard_tx_example.rs"

[[example]]
name = "uups_proxy_example"
path = "examples/uups_proxy_example.rs"

[[example]]
name = "diamond_proxy_example"
path = "examples/diamond_proxy_example.rs"

[[example]]
name = "hybrid_storage_demo"
path = "examples/hybrid_storage_demo.rs"

[[example]]
name = "fault_tolerance_test"
path = "examples/fault_tolerance_test.rs"

[[example]]
name = "blockchain_wasm_example"
path = "examples/blockchain_wasm_example.rs"

[[example]]
name = "memmap_storage_example"
path = "examples/memmap_storage_example.rs"

[[example]]
name = "quantum_svbft_example"
path = "examples/quantum_svbft_example.rs"

[[example]]
name = "real_world_simulation"
path = "examples/real_world_simulation.rs"

[[example]]
name = "sustainability_test"
path = "examples/sustainability_test.rs"

[[example]]
name = "data_chunking_test"
path = "examples/data_chunking_test.rs"

[[example]]
name = "transaction_execution_example"
path = "examples/transaction_execution_example.rs"

[dependencies]
# Async and runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
# serde_cbor = "0.11"
bincode = { workspace = true }



# Networking
libp2p = { workspace = true }
hickory-resolver = { workspace = true }

# Storage
rocksdb = { version = "0.23.0", features = ["multi-threaded-cf"] }
light-poseidon = "0.1.0"
# Field type for Poseidon (BN254)
ark-bn254 = "0.4"
ark-ff = "0.4"
ark-serialize = "0.4"
ark-groth16 = "0.4"
# reed-solomon-erasure removed to avoid unmaintained transitive deps

# Cryptography and security
ed25519-dalek = "2.1.1"
sha2 = { workspace = true }
sha3 = { workspace = true }
blake2 = { workspace = true }
blake3 = { workspace = true }
reed-solomon-erasure = "6"
data-encoding = "2.5.0"
ring = "0.17.12"
jsonwebtoken = "9.3.0"
aes-gcm = { workspace = true }
hmac = { workspace = true }
argon2 = { workspace = true }
zeroize = { workspace = true }
secp256k1 = { workspace = true }
bulletproofs = { workspace = true }
merlin = { workspace = true }
curve25519-dalek = "4.1.3"
arrayref = { workspace = true }

# zk-SNARKs (dependencies already added above: k256, elliptic-curve, hex, clap)
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-std = "0.4"
ark-snark = "0.4"

# Compression
brotli = { workspace = true }
lz4_flex = { workspace = true }
flate2 = { workspace = true }
md5 = "0.7.0"
regex = "1.10"
zstd = "0.13.2"

# Math and utilities
num-bigint = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
byteorder = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
base64 = { workspace = true }
rayon = { workspace = true }
num_cpus = { workspace = true }
bumpalo = { workspace = true }
sysinfo = { workspace = true }
tiny-keccak = { workspace = true }
lazy_static = { workspace = true }
socket2 = { workspace = true }
memmap2 = { workspace = true }
rlp = "0.5"
wasmer = "4.2"
ethers = { version = "2.0", features = ["ws", "rustls"] }

# Machine Learning and AI
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
# candle-core = "0.3.3"
# candle-nn = "0.3.3"
# frost-dalek = "0.1.0"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
log = { workspace = true }
env_logger = { workspace = true }
tracing = { workspace = true }

# Web framework
axum = { workspace = true, features = ["multipart"] }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
urlencoding = "2.1"
tokio-tungstenite = "0.25"
url = "2.5"

# gRPC framework
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# WASM Runtime
# wasmtime = { workspace = true, optional = true }
wasmparser = "0.218.0"
wasm-smith = "0.218.0"
# wat will be resolved by wasmtime dependency
# wasmer = "4.3.7"  # Removed due to wat version conflict with wasmtime
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
web-sys = "0.3.72"
serde-wasm-bindgen = "0.6.5"
# z3 = "0.12.0"  # Commented out - requires system Z3 installation

# EVM Runtime
ethereum-types = { workspace = true }
evm-runtime = "0.43.0"
revm = { version = "19.4.0", features = ["std", "secp256k1"] }
revm-primitives = { version = "15.1.0", features = ["std"] }

# Web3 and Blockchain Integration
# web3 = "0.19.0"  # Temporarily disabled due to idna vulnerability
# ethers = { version = "2.0.14", features = ["celo"] }  # Temporarily disabled due to ring vulnerability
# alloy-primitives = "1.3.1"
# alloy-sol-types = "1.0.0-rc.1"
# alloy-json-abi = "0.7.7"

# Bitcoin Integration
bitcoin = "0.32.0"
bitcoin_hashes = "0.12.0"

# IBC Integration - commented out to avoid unmaintained paste dependency
# tendermint = "0.32.2"
# tendermint-rpc = "0.32.2"
# cosmrs = "0.12.0"

# XCM Integration
# subxt = "0.35.0"
codec = { package = "parity-scale-codec", version = "3.6.0", features = ["derive"] }

# BLS signatures and pairing
blst = "0.3.11"
pairing = "0.23.0"

# Additional cryptography
ripemd = "0.1.3"
k256 = "0.13.3"
elliptic-curve = "0.13.8"
num-traits = "0.2.19"

# Async trait support
async-trait = "0.1.80"

# JSON-RPC
jsonrpc-core = "18.0.0"
jsonrpc-http-server = "18.0.0"

# Metrics and monitoring
prometheus = { workspace = true }

# Python integration for AI - enable abi3 to avoid linking to system libpython at build time
pyo3 = { version = "0.24.1", features = ["abi3-py310"], optional = true }

# Additional required dependencies
hex = "0.4.3"
config = "0.14.0"
toml = "0.8.19"
crossbeam = "0.8.4"
parking_lot = "0.12.3"
dashmap = "6.1.0"
once_cell = "1.20.2"
tempfile = "3.13.0"
clap = { version = "4.5.0", features = ["derive"] }
# pqcrypto-dilithium = "0.5.0"
pqcrypto-traits = "0.3.5"
ciborium = "0.2.2"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tempfile = "3.13.0"

[features]
default = ["audit-clean"]
full = ["ai-engine", "quantum-resistance", "wasm-runtime", "evm-runtime", "cross-shard", "biometrics"]
ai-engine = []
quantum-resistance = []
wasm-runtime = []
evm-runtime = []
benchmark = []
sysinfo = []
bls = []
evM = ["evm-runtime"]
wasm = ["wasm-runtime"]
audit-clean = []
# p2p feature removed
cross-shard = []
biometrics = []

[build-dependencies]
tonic-build = "0.12"

