[package]
name = "ai-agents"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.6", features = ["v4"] }

[[bin]]
name = "ai-agents"
path = "src/main.rs"

