[package]
name = "ai-jobd"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
uuid = { version = "1.6", features = ["v4"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

[[bin]]
name = "ai-jobd"
path = "src/main.rs"

