[package]
name = "ai-proofs"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"

[[bin]]
name = "ai-proofs"
path = "src/main.rs"

