[package]
name = "ai-scheduler"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
hex = "0.4"
sha3 = "0.10"

[[bin]]
name = "ai-scheduler"
path = "src/main.rs"

